--- a/result/2022-07-05.md
+++ b/result/2022-07-05.md
@@ -12,13 +12,13 @@
 12. [朱俐静去世](https://s.weibo.com//weibo?q=%23%E6%9C%B1%E4%BF%90%E9%9D%99%E5%8E%BB%E4%B8%96%23&Refer=top) 636884
 13. [vava 抄袭](https://s.weibo.com//weibo?q=vava%20%E6%8A%84%E8%A2%AD&Refer=top) 631674
 14. [安徽泗县共863例阳性](https://s.weibo.com//weibo?q=%23%E5%AE%89%E5%BE%BD%E6%B3%97%E5%8E%BF%E5%85%B1863%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 532346
-15. [脸长得臭有多容易被人误会](https://s.weibo.com//weibo?q=%23%E8%84%B8%E9%95%BF%E5%BE%97%E8%87%AD%E6%9C%89%E5%A4%9A%E5%AE%B9%E6%98%93%E8%A2%AB%E4%BA%BA%E8%AF%AF%E4%BC%9A%23&Refer=top) 513317
-16. [小伙工作2月倒贴公司3万](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E4%BC%99%E5%B7%A5%E4%BD%9C2%E6%9C%88%E5%80%92%E8%B4%B4%E5%85%AC%E5%8F%B83%E4%B8%87%23&Refer=top) 445351
-17. [村委会回应女孩高考后遇害](https://s.weibo.com//weibo?q=%23%E6%9D%91%E5%A7%94%E4%BC%9A%E5%9B%9E%E5%BA%94%E5%A5%B3%E5%AD%A9%E9%AB%98%E8%80%83%E5%90%8E%E9%81%87%E5%AE%B3%23&Refer=top) 440707
-18. [女子给妈买100元凉鞋被丈夫扔服务区](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%BB%99%E5%A6%88%E4%B9%B0100%E5%85%83%E5%87%89%E9%9E%8B%E8%A2%AB%E4%B8%88%E5%A4%AB%E6%89%94%E6%9C%8D%E5%8A%A1%E5%8C%BA%23&Refer=top) 431483
-19. [高速公路现黄金蟒盘踞车尾](https://s.weibo.com//weibo?q=%23%E9%AB%98%E9%80%9F%E5%85%AC%E8%B7%AF%E7%8E%B0%E9%BB%84%E9%87%91%E8%9F%92%E7%9B%98%E8%B8%9E%E8%BD%A6%E5%B0%BE%23&Refer=top) 412109
-20. [俄罗斯北极地区发现大量石油](https://s.weibo.com//weibo?q=%23%E4%BF%84%E7%BD%97%E6%96%AF%E5%8C%97%E6%9E%81%E5%9C%B0%E5%8C%BA%E5%8F%91%E7%8E%B0%E5%A4%A7%E9%87%8F%E7%9F%B3%E6%B2%B9%23&Refer=top) 406642
-21. [还有什么是蟑螂做不到的](https://s.weibo.com//weibo?q=%23%E8%BF%98%E6%9C%89%E4%BB%80%E4%B9%88%E6%98%AF%E8%9F%91%E8%9E%82%E5%81%9A%E4%B8%8D%E5%88%B0%E7%9A%84%23&Refer=top) 398886
+15. [俄罗斯北极地区发现大量石油](https://s.weibo.com//weibo?q=%23%E4%BF%84%E7%BD%97%E6%96%AF%E5%8C%97%E6%9E%81%E5%9C%B0%E5%8C%BA%E5%8F%91%E7%8E%B0%E5%A4%A7%E9%87%8F%E7%9F%B3%E6%B2%B9%23&Refer=top) 527800
+16. [脸长得臭有多容易被人误会](https://s.weibo.com//weibo?q=%23%E8%84%B8%E9%95%BF%E5%BE%97%E8%87%AD%E6%9C%89%E5%A4%9A%E5%AE%B9%E6%98%93%E8%A2%AB%E4%BA%BA%E8%AF%AF%E4%BC%9A%23&Refer=top) 513317
+17. [小伙工作2月倒贴公司3万](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E4%BC%99%E5%B7%A5%E4%BD%9C2%E6%9C%88%E5%80%92%E8%B4%B4%E5%85%AC%E5%8F%B83%E4%B8%87%23&Refer=top) 445351
+18. [村委会回应女孩高考后遇害](https://s.weibo.com//weibo?q=%23%E6%9D%91%E5%A7%94%E4%BC%9A%E5%9B%9E%E5%BA%94%E5%A5%B3%E5%AD%A9%E9%AB%98%E8%80%83%E5%90%8E%E9%81%87%E5%AE%B3%23&Refer=top) 440707
+19. [还有什么是蟑螂做不到的](https://s.weibo.com//weibo?q=%23%E8%BF%98%E6%9C%89%E4%BB%80%E4%B9%88%E6%98%AF%E8%9F%91%E8%9E%82%E5%81%9A%E4%B8%8D%E5%88%B0%E7%9A%84%23&Refer=top) 437838
+20. [女子给妈买100元凉鞋被丈夫扔服务区](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%BB%99%E5%A6%88%E4%B9%B0100%E5%85%83%E5%87%89%E9%9E%8B%E8%A2%AB%E4%B8%88%E5%A4%AB%E6%89%94%E6%9C%8D%E5%8A%A1%E5%8C%BA%23&Refer=top) 431483
+21. [高速公路现黄金蟒盘踞车尾](https://s.weibo.com//weibo?q=%23%E9%AB%98%E9%80%9F%E5%85%AC%E8%B7%AF%E7%8E%B0%E9%BB%84%E9%87%91%E8%9F%92%E7%9B%98%E8%B8%9E%E8%BD%A6%E5%B0%BE%23&Refer=top) 412109
 22. [男子因生活压力大暴雨中淡定喝酒](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%9B%A0%E7%94%9F%E6%B4%BB%E5%8E%8B%E5%8A%9B%E5%A4%A7%E6%9A%B4%E9%9B%A8%E4%B8%AD%E6%B7%A1%E5%AE%9A%E5%96%9D%E9%85%92%23&Refer=top) 362224
 23. [男子将猥亵女儿者打至轻伤二级](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%B0%86%E7%8C%A5%E4%BA%B5%E5%A5%B3%E5%84%BF%E8%80%85%E6%89%93%E8%87%B3%E8%BD%BB%E4%BC%A4%E4%BA%8C%E7%BA%A7%23&Refer=top) 354908
 24. [郭艾伦因发烧错过比赛](https://s.weibo.com//weibo?q=%23%E9%83%AD%E8%89%BE%E4%BC%A6%E5%9B%A0%E5%8F%91%E7%83%A7%E9%94%99%E8%BF%87%E6%AF%94%E8%B5%9B%23&Refer=top) 320876
@@ -45,3 +45,4 @@
 45. [脂肪瘤一般不会癌变](https://s.weibo.com//weibo?q=%23%E8%84%82%E8%82%AA%E7%98%A4%E4%B8%80%E8%88%AC%E4%B8%8D%E4%BC%9A%E7%99%8C%E5%8F%98%23&Refer=top) 118602
 46. [罗永浩称直播界刮起讲内容歪风](https://s.weibo.com//weibo?q=%23%E7%BD%97%E6%B0%B8%E6%B5%A9%E7%A7%B0%E7%9B%B4%E6%92%AD%E7%95%8C%E5%88%AE%E8%B5%B7%E8%AE%B2%E5%86%85%E5%AE%B9%E6%AD%AA%E9%A3%8E%23&Refer=top) 59750
 47. [王哲林半场12分](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E5%93%B2%E6%9E%97%E5%8D%8A%E5%9C%BA12%E5%88%86%23&Refer=top) 50403
+48. [膝盖屈伸咔咔响怎么办](https://s.weibo.com//weibo?q=%23%E8%86%9D%E7%9B%96%E5%B1%88%E4%BC%B8%E5%92%94%E5%92%94%E5%93%8D%E6%80%8E%E4%B9%88%E5%8A%9E%23&Refer=top) 45759
