--- a/result/2022-07-05.md
+++ b/result/2022-07-05.md
@@ -49,3 +49,4 @@
 49. [救人者回应巨浪中勇救落水女童](https://s.weibo.com//weibo?q=%23%E6%95%91%E4%BA%BA%E8%80%85%E5%9B%9E%E5%BA%94%E5%B7%A8%E6%B5%AA%E4%B8%AD%E5%8B%87%E6%95%91%E8%90%BD%E6%B0%B4%E5%A5%B3%E7%AB%A5%23&Refer=top) 42859
 50. [世界和平论坛](https://s.weibo.com//weibo?q=%23%E4%B8%96%E7%95%8C%E5%92%8C%E5%B9%B3%E8%AE%BA%E5%9D%9B%23&Refer=top) 15591
 51. [如何理解活在当下](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E7%90%86%E8%A7%A3%E6%B4%BB%E5%9C%A8%E5%BD%93%E4%B8%8B%23&Refer=top) 8506
+52. [台风艾利](https://s.weibo.com//weibo?q=%E5%8F%B0%E9%A3%8E%E8%89%BE%E5%88%A9&Refer=top) 6186
